--- a/index/templates/index/plantilla.html
+++ b/index/templates/index/plantilla.html
@@ -1,12 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+{% extends 'index/index.html' %}
+
+{% block 'body_block' %}
     <h1>
         Hola esta es mi plantilla!!!
     </h1>
@@ -24,5 +18,4 @@
         </li>
     {% endfor %}
 
-</body>
-</html>
+    {% endblock 'body_block' %}
