--- a/index/templates/index/plantilla.html
+++ b/index/templates/index/plantilla.html
@@ -1,9 +1,12 @@
 {% extends 'index/index.html' %}
 
-{% block 'body_block' %}
-    <h1>
+{% block 'header_block' %}
+    <h1 class="mb-5">
         Hola esta es mi plantilla!!!
     </h1>
+{% endblock 'header_block' %} 
+
+{% block 'body_block' %} 
     <h2>
     {{nombre}}   
     </h2>
