--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -31,8 +31,9 @@
                     <div class="col-xl-6">
                         <div class="text-center text-white">
                             <!-- Page heading-->
-                            {% block  %}{% endblock  %}
-                            <h1 class="mb-5">Generate more leads with a professional landing page!</h1>
+                            {% block 'header_block' %}
+                            <h1 class="mb-5">Bienvenidos a nuestra Pagina de Inicio!</h1>
+                            {% endblock 'header_block' %} 
                         </div>
                     </div>
                 </div>
