--- a/index/templates/index/plantilla.html
+++ b/index/templates/index/plantilla.html
@@ -1,11 +1,11 @@
 {% extends 'index/index.html' %}
 
-{% block 'header_block' %}
-    <h1 class="mb-5">
-        Hola esta es mi plantilla!!!
-    </h1>
-{% endblock 'header_block' %} 
-
+{% block 'header_text_block'%}
+        <h1 class="mb-5">
+            Hola esta es mi plantilla
+        </h1>
+{% endblock 'header_text_block'%} 
+        
 {% block 'body_block' %} 
     <h2>
     {{nombre}}   
