--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Landing Page - Start Bootstrap Theme</title>
+        <title>Primera Pagina - CodderHouse Curso de Python</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Bootstrap icons-->
@@ -23,7 +23,8 @@
                 <a class="navbar-brand" href={% url 'index' %}>Index</a>
                 <a class="navbar-brand" href={% url 'plantilla' %}>Plantilla </a>
                 <a class="navbar-brand" href={% url 'crear_cerrajero' %}>Crear Cerrajero </a>
-                <a class="navbar-brand" href="#">Buscar Cerrajero </a>
+                <a class="navbar-brand" href={% url 'crear_futbolistas' %}>Crear Futbolista </a>
+                <a class="navbar-brand" href={% url 'lista_cerrajeros' %}>Lista Cerrajeros </a>
             </div>
         </nav>
         <!-- Masthead-->
