Ultima carga de Modelo Actores

--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -21,9 +21,10 @@
         <nav class="navbar navbar-light bg-light static-top">
             <div class="container">
                 <a class="navbar-brand" href={% url 'index' %}>Index</a>
-                <a class="navbar-brand" href={% url 'plantilla' %}>Plantilla </a>
+                <a class="navbar-brand" href={% url 'plantilla' %}>Información </a>
                 <a class="navbar-brand" href={% url 'crear_cerrajero' %}>Crear Cerrajero </a>
                 <a class="navbar-brand" href={% url 'crear_futbolistas' %}>Crear Futbolista </a>
+                <a class="navbar-brand" href={% url 'crear_actor' %}>Crear Actor </a>
                 <a class="navbar-brand" href={% url 'lista_cerrajeros' %}>Lista Cerrajeros </a>
             </div>
         </nav>
@@ -53,15 +54,12 @@
                 <div class="row">
                     <div class="col-lg-6 h-100 text-center text-lg-start my-auto">
                         <ul class="list-inline mb-2">
-                            <li class="list-inline-item"><a href="#!">About</a></li>
+                            <li class="list-inline-item"><a href="#!">Nosotros</a></li>
                             <li class="list-inline-item">⋅</li>
-                            <li class="list-inline-item"><a href="#!">Contact</a></li>
+                            <li class="list-inline-item"><a href="#!">Contacto</a></li>
                             <li class="list-inline-item">⋅</li>
-                            <li class="list-inline-item"><a href="#!">Terms of Use</a></li>
-                            <li class="list-inline-item">⋅</li>
-                            <li class="list-inline-item"><a href="#!">Privacy Policy</a></li>
                         </ul>
-                        <p class="text-muted small mb-4 mb-lg-0">&copy; Your Website 2021. All Rights Reserved.</p>
+                        <p class="text-muted small mb-4 mb-lg-0">&copy; Pagina Creada en el 2022.</p>
                     </div>
                     <div class="col-lg-6 h-100 text-center text-lg-end my-auto">
                         <ul class="list-inline mb-0">
