--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -22,10 +22,9 @@
             <div class="container">
                 <a class="navbar-brand" href={% url 'index' %}>Index</a>
                 <a class="navbar-brand" href={% url 'plantilla' %}>Información </a>
-                <a class="navbar-brand" href={% url 'crear_cerrajero' %}>Crear Cerrajero </a>
+                <a class="navbar-brand" href={% url 'cerrajeros' %}>Cerrajeros </a>
                 <a class="navbar-brand" href={% url 'crear_futbolistas' %}>Crear Futbolista </a>
                 <a class="navbar-brand" href={% url 'crear_actor' %}>Crear Actor </a>
-                <a class="navbar-brand" href={% url 'lista_cerrajeros' %}>Lista Cerrajeros </a>
             </div>
         </nav>
         <!-- Masthead-->
