--- a/profesionales/templates/profesionales/cerrajero_form.html
+++ b/profesionales/templates/profesionales/cerrajero_form.html
@@ -7,13 +7,14 @@
     <p>
         <a href={% url 'cerrajeros'%}>Volver</a>
     </p>
+
     <form action="" method='post'>
         {% csrf_token %}
         <table>
             {{form.as_table}}
         </table>
-        {% comment %} <input type="submit" value="Crear"> {% endcomment %}
-        <button>Crear</button>
+
+        <button>Editar</button>
     </form>
 
 {% endblock 'body_block' %}
