--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -23,6 +23,12 @@
                 <a class="navbar-brand" href={% url 'index' %}>Index</a>
                 <a class="navbar-brand" href={% url 'plantilla' %}>Información </a>
                 <a class="navbar-brand" href={% url 'cerrajeros' %}>Cerrajeros </a>
+                {% if  request.user.is_authenticated%}
+                    <a class="navbar-brand" href={% url 'logout' %}>Logout </a>
+                {% else %}
+                    <a class="navbar-brand" href={% url 'login' %}>Login </a>
+                    <a class="navbar-brand" href={% url 'registrarse' %}>Registrarse </a>
+                {% endif %}                
                 <a class="navbar-brand" href={% url 'crear_futbolistas' %}>Crear Futbolista </a>
                 <a class="navbar-brand" href={% url 'crear_actor' %}>Crear Actor </a>
             </div>
